--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="light">
   <head>
     <meta charset="UTF-8" />
     <link
@@ -7,9 +7,12 @@
       href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='75' font-size='75'>🔪</text></svg>"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="light dark" />
     <title>Kniferoll</title>
   </head>
-  <body>
+  <body
+    class="bg-white dark:bg-slate-950 text-gray-900 dark:text-slate-50 transition-colors"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
