--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -8,6 +8,12 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark" />
+    <meta name="description" content="Kitchen prep management made simple" />
+
+    <!-- Performance: DNS prefetch and preconnect to critical origins -->
+    <link rel="dns-prefetch" href="https://cdn.supabase.co" />
+    <link rel="preconnect" href="https://cdn.supabase.co" crossorigin />
+
     <title>Kniferoll</title>
   </head>
   <body
