--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -8,11 +8,34 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta name="color-scheme" content="light dark" />
-    <meta name="description" content="Kitchen prep management made simple" />
+
+    <!-- SEO -->
+    <title>Kniferoll - Kitchen Prep Management for Professional Chefs</title>
+    <meta name="description" content="Streamline your kitchen prep with Kniferoll. Real-time collaboration, station management, and prep tracking for professional kitchens. Free to get started." />
+    <link rel="canonical" href="https://www.kniferoll.io/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.kniferoll.io/" />
+    <meta property="og:title" content="Kniferoll - Kitchen Prep Management for Professional Chefs" />
+    <meta property="og:description" content="Streamline your kitchen prep with Kniferoll. Real-time collaboration, station management, and prep tracking for professional kitchens." />
+    <meta property="og:image" content="https://www.kniferoll.io/icons/icon-512.png" />
+    <meta property="og:site_name" content="Kniferoll" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:url" content="https://www.kniferoll.io/" />
+    <meta name="twitter:title" content="Kniferoll - Kitchen Prep Management for Professional Chefs" />
+    <meta name="twitter:description" content="Streamline your kitchen prep with Kniferoll. Real-time collaboration, station management, and prep tracking for professional kitchens." />
+    <meta name="twitter:image" content="https://www.kniferoll.io/icons/icon-512.png" />
 
     <!-- iOS PWA: edge-to-edge display with translucent status bar -->
     <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Kniferoll" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
     <!-- Theme color for status bar - updated dynamically by useDarkMode hook -->
     <meta name="theme-color" content="#fffbeb" />
     <meta name="theme-color" content="#fffbeb" media="(prefers-color-scheme: light)" />
@@ -21,8 +44,6 @@
     <!-- Performance: DNS prefetch and preconnect to critical origins -->
     <link rel="dns-prefetch" href="https://cdn.supabase.co" />
     <link rel="preconnect" href="https://cdn.supabase.co" crossorigin />
-
-    <title>Kniferoll</title>
   </head>
   <body
     class="bg-amber-50 dark:bg-slate-900 text-gray-900 dark:text-slate-50 transition-colors"
